
public class GameDialogue {

       public void storyPart1(){
        }
        public void storyPart2(){
        }
        public void storyPart3(){
        }

}
