
import java.util.ArrayList;

public class Items {

    private String name;
    private int addAttck;
    private int addHealth;
    private int addDefend;
    private int currency;
    ArrayList<String> items;


    public void createItem(){}

    public void getItem(){}

    public void sellItem(){}

    public void equipItem(){}

    public void buyItem(){}


}

