
public class Player {

    private String name;
    private int attack;
    private int defense;
    private int health;
    private int xp;

    public Player(String name, int attack, int health, int xp) {
        this.name = name;
        this.health = health;
        this.attack = attack;
        this.xp = xp;

        public void createPlayer() {
        }

        public void equipItem() {

        }
        public String getName() {
            return name;

        }

        public String setName() {
            return name;
        }

        public int getPlayer() {
            return Player;
            //lavede en player attribut fordi det havde vi ikke så kunne ikke lave en getter

        }
    }

