public class Combat {
    private int attack;
    private int defense;
    private int health;


        public void heavyAttack(){}

        public void lightAttack(){}

        public void consume(){}

        public void flee(){}



}
