public class Creature {
  private String name;
   private int attack;
   private int defense;
   private int health;
   private int currency;
   private <List> items;



        public createCreature() {

        }

    public getCreature() {
              return creature;
            }

     public void setCreature () {
             this.creature = creature;
            }



   }

