public class NPC {
    private int currency;
    private int health;
    private int attack;
    private int defense;
    private String name;
    private <List> items;


        public createNPC() {
        }

        public String getName() {
            return name;
        }

        public void setName(String name) {
            this.name = name;
        }


    }
