¢@startuml

!pragma layout smetana


class Main{
+ static void main(String[] args)
+ runGame()

}


class GameDialogue{
+ storyPart1()
+ storyPart2()
+ storyPart3()
}

class Player{
- String name
- int attack
- int defence
- int health
- int currency
- int xp
- <list>Inventory
+equipItem()
+levelUp()
+displayInventory()
+getPlayer()
+getName()
+setName()
}


class Creature{
- String name
- int attack
- int defence
- int health
- int currency
- <List> items
+ createCreature()
+ getCreature()
+ setCreature()
}


class  NPC{
- int currency
- int health
- int attack
- int defence
- String name
- <List> items
+ createNPC()
+ getter()
+ setter()
}


class  Combat{
- int attack
- int defence
- int health
+ heavyAttack()
+ lightAttack()
+ consume()
+ flee()
}


class  Quest{
- int currency
- int items
- int xp
+ createQuest()
+ getQuest()
+ setQuest()
+ viewQuest()
+ completeQuest()
}


class  Items{
- String name
- int addAttack
- int addDefend
- int addhealth
- int currency
- ArrayList <List>Items
+ createItem()
+ getItem()
+ sellItem()
+ equipItem()
+ buyItem()

}


Main --* GameDialogue
Player --* Items: has a
Creature --* Items: has a
GameDialogue --* Items: has a
Quest --* Items: has a
GameDialogue --* NPC: has a
NPC --* Quest: has a
Player --* Combat: has a
Creature --* Combat: has a
NPC --* Combat: has a
Creature --* GameDialogue: has a
NPC --* Creature: is a
GameDialogue --* Player: has a
NPC --* Items: has a

@enduml


Combat Class;
Attributter:

attack
deffence
health
Metoder:

